Problem solving store null