@@ -1,15 +1,11 @@
 package se.iths.grocerylistgenerator.mapper;
 
 import org.springframework.stereotype.Service;
-import se.iths.grocerylistgenerator.dto.AddPersonDto;
 import se.iths.grocerylistgenerator.dto.CategoryDto;
-import se.iths.grocerylistgenerator.dto.PersonDto;
 import se.iths.grocerylistgenerator.model.Category;
-import se.iths.grocerylistgenerator.model.Person;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryMapper {
@@ -29,7 +25,7 @@ public class CategoryMapper {
         return categories
                 .stream()
                 .map(this::mapp)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<CategoryDto> mapp(Optional<Category> optionalCategory) {
